--- a/src/bounceBall/index.html
+++ b/src/bounceBall/index.html
@@ -1,13 +1,16 @@
 <!DOCTYPE html>
-<html lang="en">
+<html>
+
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
-    <style src="../../scss/common.css"></style>
+    <meta charset='utf-8'>
+    <meta http-equiv='X-UA-Compatible' content='IE=edge,chrome=1'>
+    <meta name='viewport' content='width=device-width, initial-scale=1, maximum-scale=1,user-scalable=0'>
+    <title>Swing</title>
+    <link rel='stylesheet' href='style.css'>
 </head>
+
 <body>
-    hi
-<script type="module" src="./app.js"></script>
+    <script type="module" src="app.js"></script>
 </body>
+
 </html>
